--- a/app/services.html
+++ b/app/services.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/header_footer.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/services.css">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -58,9 +60,9 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
-								<li class="nav-item active"><a href="index.html" class="nav-link">Главная</a></li>
+								<li class="nav-item "><a href="index.html" class="nav-link">Главная</a></li>
 								<li class="nav-item"><a href="about_us.html" class="nav-link">О нас</a></li>
-								<li class="nav-item"><a href="#" class="nav-link">Услуги</a></li>
+								<li class="nav-item active"><a href="#" class="nav-link">Услуги</a></li>
 								<li class="nav-item"><a href="gallery.html" class="nav-link">Галерея</a></li>
 								<li class="nav-item"><a href="contact.html" class="nav-link">Контакты</a></li>
 							</ul>
@@ -79,7 +81,253 @@
 		</div>
 		</div>
 	</header>
-
+	<div class="services" id="advanced">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h2>О нашем сервисе</h2>
+				</div>
+				<div class="description">
+					<p>Что бы не случилось в вашим устройством. Мы сможем это починить. Выберите наиболее подходящее вам
+						из готовых решений что бы получить больше инофрмации по вашей проблеме.</p>
+				</div>
+				<div class="advanced col-lg-3 col-md-6 col-12">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-desktop" aria-hidden="true"></i>
+							<h3>Ремонт компьютеров</h3>
+							<p>Наша команда высоко квалифицированных специалистов готова позоботится об вашем
+								компьютере.
+							</p>
+							<a href="#comp_form" class="comp_popup"><i class="fa fa-arrow-right"
+									aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="advanced col-lg-3 col-md-6 col-12">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-building-o" aria-hidden="true"></i>
+							<h3>Ремонт телефонов</h3>
+							<p>Мы можем чинить устройства со 100% пользовательской кастомизацией и предлагаем гарантию
+								1,5
+								месяца </p>
+							<a href="#phone_form" class="phone_popup"><i class="fa fa-arrow-right"
+									aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="advanced col-lg-3 col-md-6 col-12">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-desktop" aria-hidden="true"></i>
+							<h3>Ремонт ноутбуков</h3>
+							<p>Мы можем починить любые типы ноутбуков надежно и в короткие сроки.</p>
+							<a href="#nout_form" class="nout_popup"><i class="fa fa-arrow-right"
+									aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="advanced col-lg-3 col-md-6 col-12">
+					<div class="item">
+						<div class="description">
+							<i class="fa fa-building-o" aria-hidden="true"></i>
+							<h3>Ремонт планшетов</h3>
+							<p>Мы можем предоставить ремонт лучшего качества любому типу устройств и бесплатно
+								диагностировать
+								проблему.</p>
+							<a href="#plan_form" class="plan_popup"><i class="fa fa-arrow-right"
+									aria-hidden="true"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="opinion">
+		<div class="container">
+			<div class="row">
+				<div class="description col-12 col-lg-6">
+					<h2>Отзывы наших клиентов</h2>
+					<div class="slider_opinion">
+						<div class="item">
+							<p>Спасибо за профессионализм, ребята!
+								Очень приятно было получить квалифицированную помощь, особенно после предыдущих
+								неудачных мытарств по сервисным центрам нашего города. Особая благодарность Никите,
+								который занимался нашим компом! Приехал, забрал, разобрался, отзвонился — разъяснил. А
+								после ремонта привёз, установил, настроил. Супер! Всё работает как надо! Спасибо! Нашла
+								для себя любимый сервисный центр!</p>
+							<h4>Любовь Владимировна</h4>
+						</div>
+						<div class="item">
+							<p>Было с чем сравнить. До этого по гарантии отдал МП (материнскую плату — прим. редактора)в
+								другой СЦ, в итоге они погнули мне контакты на МП и отказали в гарантии.
+								По совету друга обратился в данный СЦ. Быстро (за 2 дня), качественно и недорого
+								выпрямили контакты. Обслуживание клиентов на уровне (дали кучу скидок).
+								Надеюсь мы будем видеться очень редко Но всем друзьям посоветую.</p>
+							<h4>Дмитрий Кравцов</h4>
+						</div>
+					</div>
+				</div>
+				<div class="image col-lg-6 d-none d-lg-block"><img src="img/client_image.jpg" alt="Image_client"></div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div id="comp_form" class="mfp-hide white-popup-block">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h1>Ремонт компьютеров</h1>
+				</div>
+				<div class="col-12 col-md-6">
+					<form class="call-back" id="callback">
+						<input type="text" name="name" id="name" placeholder="Введите ваше имя" required>
+						<input type="text" name="phone" id="phone" placeholder="Введите ваш телефон" required>
+						<textarea name="message" name="comment" id="comment" placeholder="Опишите вашу проблему"
+							required></textarea>
+						<button type="submit" class="button" id="callback" for="callback">Отправить</button>
+						<div class="error_callback"></div>
+					</form>
+				</div>
+				<ul class="col-12 col-md-6">
+					<li>Ремонт компьютера</li>
+					<li>Установка, настройка Windows XP / 7 / 8 6</li>
+					<li>Установка, настройка Windows XP / 7 / 8 с переносом данных (документы, фото)</li>
+					<li>Установка пакета Microsoft Office 2003/2007/2010</li>
+					<li>Установка драйверов</li>
+					<li>Настройка доступа в Интернет</li>
+					<li>Установка сервисного программного обеспечения (кодеки, улучшения и т.д.)</li>
+					<li>Настройка другого программного обеспечения за 1 шт</li>
+					<li>Установка и настройка антивирусного ПО</li>
+					<li>Разбивка жесткого диска</li>
+					<li>Снятие банера от СМС вымогателей</li>
+					<li>Удаление нежелательных всплывающих баннеров и заставок с рабочего стола</li>
+					<li>Лечение от вирусов</li>
+					<li>Настройка почтового клиента</li>
+					<li>Очистка компьютера от ненужных файлов, мусора, хлама</li>
+					<li>Очистка системного блока от пыли</li>
+					<li>Оптимизация работы ПК (ускорение работы и восстановление рабочего состояния)</li>
+					<li>Диагностика неисправного системного блока</li>
+					<li>Установка/настройка внешнего устройства (сканер, принтер, фотоаппарат и т.д.)</li>
+					<li>Установка/замена внутренних устройств (процессор, видеокарта, модулей памяти, блок
+						питания)</li>
+					<li>Установка/замена жёсткого диска с переносом данных и установкой системы</li>
+					<li>Установка/замена материнской платы с перенастройкой системы</li>
+					<li>Замена термопасты</li>
+					<li>Восстановление ОС</li>
+					<li>Сброс пароля Windows</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div id="phone_form" class="mfp-hide white-popup-block">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h1>Ремонт телефонов</h1>
+				</div>
+				<div class="col-12 col-md-6">
+					<form class="call-back" id="callback">
+						<input type="text" name="name" id="name" placeholder="Введите ваше имя" required>
+						<input type="text" name="phone" id="phone" placeholder="Введите ваш телефон" required>
+						<textarea name="message" name="comment" id="comment" placeholder="Опишите вашу проблему"
+							required></textarea>
+						<button type="submit" class="button" id="callback" for="callback">Отправить</button>
+						<div class="error_callback"></div>
+					</form>
+				</div>
+				<ul class="col-12 col-md-6">
+					<li>Ремонт телефона</li>
+					<li>Замена программного обеспечения телефона</li>
+					<li>Обновление и перепрошивка)</li>
+					<li>Разблокировка</li>
+					<li>Замена дисплея</li>
+					<li>Замена корпусных элементов</li>
+					<li>Замена батарейки</li>
+					<li>Чистка от коррозии</li>
+					<li>Замена touch screen (сенсорного дисплея)</li>
+					<li>Замена джойстика, кнопок</li>
+					<li>Замена шлейфов и микросхем</li>
+					<li>Замена динамика, микрофона</li>
+					<li>Замена разъема зарядки, наушников</li>
+					<li>Восстановление после попадания влаги</li>
+					<li>Восстановление после ударов</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div id="nout_form" class="mfp-hide white-popup-block">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h1>Ремонт телефонов</h1>
+				</div>
+				<div class="col-12 col-md-6">
+					<form class="call-back" id="callback">
+						<input type="text" name="name" id="name" placeholder="Введите ваше имя" required>
+						<input type="text" name="phone" id="phone" placeholder="Введите ваш телефон" required>
+						<textarea name="message" name="comment" id="comment" placeholder="Опишите вашу проблему"
+							required></textarea>
+						<button type="submit" class="button" id="callback" for="callback">Отправить</button>
+						<div class="error_callback"></div>
+					</form>
+				</div>
+				<ul class="col-12 col-md-6">
+					<li>Модернизация ноутбуков</li>
+					<li>Ремонт материнских плат ноутбуков</li>
+					<li>Замена комплектующих ноутбуков</li>
+					<li>Замена ЖК матриц ноутбуков и КПК</li>
+					<li>Ремонт видеокарт ноутбуков</li>
+					<li>Ремонт и замена клавиатур ноутбуков</li>
+					<li>Установка и настройка программного обеспечения на ноутбуки, восстановление операционной системы
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div id="plan_form" class="mfp-hide white-popup-block">
+		<div class="container">
+			<div class="row">
+				<div class="title col-12">
+					<h1>Ремонт планшетов</h1>
+				</div>
+				<div class="col-12 col-md-6">
+					<form class="call-back" id="callback">
+						<input type="text" name="name" id="name" placeholder="Введите ваше имя" required>
+						<input type="text" name="phone" id="phone" placeholder="Введите ваш телефон" required>
+						<textarea name="message" name="comment" id="comment" placeholder="Опишите вашу проблему"
+							required></textarea>
+						<button type="submit" class="button" id="callback" for="callback">Отправить</button>
+						<div class="error_callback"></div>
+					</form>
+				</div>
+				<ul class="col-12 col-md-6">
+					<li>Замена тачскрина</li>
+					<li>Замена дисплея</li>
+					<li>Замена центральной платы \ ремонт</li>
+					<li>Замена слухового динамика</li>
+					<li>Замена дисплейного модуля</li>
+					<li>Замена полифонического динамика</li>
+					<li>Замена микрофона</li>
+					<li>Замена корпусной части \ ремонт</li>
+					<li>Замена сим коннектора</li>
+					<li>замена АКБ</li>
+					<li>Замена разъема гарнитуры \ ремонт</li>
+					<li>Замена шлейфа кнопки включения</li>
+					<li>Замена шлейфа кнопок громкости</li>
+					<li>Замена передней камеры</li>
+					<li>Замена задней камеры</li>
+					<li>Замена разъема питания \ ремонт</li>
+					<li>Замена шлейфа Wi-Fi</li>
+					<li>Замена контроллера питания</li>
+					<li>Устранение неполадок сети</li>
+					<li>Чистка после попадания влаги</li>
+					<li>Смена ПО</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<footer>
 		<div class="container-fluid footer_top">
 			<div class="container">
@@ -138,21 +386,24 @@
 						</div>
 						<div class="description">
 							<ul>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#advanced">Ремонт
 										ноутбука</a></li>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#advanced">Ремонт
 										iPhone</a></li>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт iPad</a>
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#advanced">Ремонт
+										iPad</a>
 								</li>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#advanced">Ремонт
 										планшета</a></li>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#advanced">Ремонт
 										смарфона</a></li>
 								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Ремонт
 										гаджетов</a></li>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Востановление
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a
+										href="#advanced">Востановление
 										данных</a></li>
-								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a href="#">Резервное
+								<li><i class="fa fa-long-arrow-right" aria-hidden="true"></i><a
+										href="#advanced">Резервное
 										копирование</a></li>
 							</ul>
 						</div>
@@ -164,13 +415,19 @@
 						<div class="description">
 							<p>Вы можете оставить нам свой телефон или адрес электронной почты. Мы с вами свяжемся в
 								скором времени.</p>
-							<form action="send.php" class="email">
-								<input type="email" placeholder="example@example.com" required><button type="submit"><i
+							<form class="email form" id="footer_email">
+								<input name="email" id="email" type="email" placeholder="example@example.com" required>
+								<button class="button" type="submit" form="footer_email" id="footer_email_submit"><i
 										class="fa fa-chevron-right" aria-hidden="true"></i></button>
+								<div id="error_email">
+								</div>
 							</form>
-							<form action="send.php">
-								<input type="text" placeholder="+7(900) 000-00-00" required><button type="submit"><i
-										class="fa fa-chevron-right" aria-hidden="true"></i></button>
+							<form class="phone form" id="footer_email">
+								<input type="text" placeholder="+7(900) 000-00-00" required>
+								<button class="button" for="footer_phone" type="submit"><i class="fa fa-chevron-right"
+										aria-hidden="true"></i></button>
+								<div id="error_phone">
+								</div>
 							</form>
 						</div>
 					</div>
