--- a/app/gallery.html
+++ b/app/gallery.html
@@ -21,6 +21,7 @@
 			<div class="row head_top">
 				<div class="logotype col-12 col-xl-3 ">
 					<img src="img/logo.png" alt="logotype">
+					<p>ИП Шевяков</p>
 				</div>
 				<div class="col-6 col-xl-2 info">
 					<div class="icon"><img src="img/basic_home.png" alt="Home"></div>
@@ -44,7 +45,7 @@
 					</div>
 				</div>
 				<div class="col-12 col-xl-3 order_call">
-					<button>Заказать звонок</button>
+					<a href="#footer_email">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
@@ -128,6 +129,8 @@
 					<div class="service_title col-lg-4 col-12 ">
 						<div class="logotype">
 							<img src="img/logo-footer.png" alt="logotype">
+							<p>ИП Шевяков</p>
+
 						</div>
 						<div class="description">
 							<p>Restore это центр починки электронной техники. В основном мы занимаемся ремонтом
