--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 			<div class="row head_top">
 				<div class="logotype col-12 col-xl-3 ">
 					<img src="img/logo.png" alt="logotype">
+					<p>ИП Шевяков</p>
 				</div>
 				<div class="col-6 col-xl-2 info">
 					<div class="icon"><img src="img/basic_home.png" alt="Home"></div>
@@ -42,7 +43,7 @@
 					</div>
 				</div>
 				<div class="col-12 col-xl-3 order_call">
-					<button>Заказать звонок</button>
+					<a href="#footer_email">Заказать звонок</a>
 				</div>
 			</div>
 		</div>
@@ -90,8 +91,8 @@
 							<p>Просто свяжитесь с нами и мы позаботимся о вашей техники, и вернем ее в лучшем виде.</p>
 						</div>
 						<div class="buttons">
-							<button>Заказать звонок</button>
-							<button>Узнать больше</button>
+							<a href="#footer_email">Заказать звонок</a>
+							<a href="services.html">Узнать больше</a>
 						</div>
 					</div>
 				</div>
@@ -108,8 +109,8 @@
 							<p>Просто свяжитесь с нами и мы позаботимся о вашей техники, и вернем ее в лучшем виде.</p>
 						</div>
 						<div class="buttons">
-							<button>Заказать звонок</button>
-							<button>Узнать больше</button>
+							<a href="#footer_email">Заказать звонок</a>
+							<a href="services.html">Узнать больше</a>
 						</div>
 					</div>
 				</div>
@@ -580,6 +581,7 @@
 					<div class="service_title col-lg-4 col-12 ">
 						<div class="logotype">
 							<img src="img/logo-footer.png" alt="logotype">
+							<p>ИП Шевяков</p>
 						</div>
 						<div class="description">
 							<p>Restore это центр починки электронной техники. В основном мы занимаемся ремонтом
